--- a/src/robot_simulation/config/gz_bridge.yaml
+++ b/src/robot_simulation/config/gz_bridge.yaml
@@ -9,7 +9,7 @@
   direction: ROS_TO_GZ
 
 - ros_topic_name: "/scan"
-  gz_topic_name: "/lidar/points"
+  gz_topic_name: "/lidar"
   ros_type_name: "sensor_msgs/msg/LaserScan"
   gz_type_name: "gz.msgs.LaserScan"
   subscriber_queue: 10
@@ -27,8 +27,7 @@
   lazy: false
   direction: GZ_TO_ROS
 
-
-- ros_topic_name: "/odom"
+- ros_topic_name: "/model/fejemis/odometry"
   gz_topic_name: "/model/fejemis/odometry"
   ros_type_name: "nav_msgs/msg/Odometry"
   gz_type_name: "gz.msgs.Odometry"
@@ -36,4 +35,14 @@
   publisher_queue: 10
   lazy: false
   direction: GZ_TO_ROS
+
+- ros_topic_name: "/tf"
+  gz_topic_name: "/model/fejemis/tf"
+  ros_type_name: "tf2_msgs/msg/TFMessage"
+  gz_type_name: "gz.msgs.Pose_V"
+  subscriber_queue: 10
+  publisher_queue: 10
+  lazy: false
+  direction: BIDIRECTIONAL
+  
   
