--- a/src/robot_description/config/my_controllers.yaml
+++ b/src/robot_description/config/my_controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 30
+    update_rate: 250
     use_sim_time: true
 
     diff_cont:
@@ -12,8 +12,10 @@ controller_manager:
 
 diff_cont:
   ros__parameters:
+    use_sim_time: true
 
-    publish_rate: 30.0 # You can set this higher than the controller manager update rate, but it will be throttled
+    publish_rate: 200.0 # You can set this higher than the controller manager update rate, but it will be throttled
+    odom_frame_id: odom
     base_frame_id: base_link
 
     left_wheel_names: ['left_wheel_joint']
@@ -21,4 +23,19 @@ diff_cont:
     wheel_separation: 0.44
     wheel_radius: 0.1
 
-    use_stamped_vel: false
+    wheel_separation_multiplier: 1.0
+    left_wheel_radius_multiplier: 1.0
+    right_wheel_radius_multiplier: 1.0
+  
+    pose_covariance_diagonal : [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
+    twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
+
+    open_loop: true
+    enable_odom_tf: true
+
+    cmd_vel_timeout: 0.5
+    #publish_limited_velocity: true
+    use_stamped_vel: true
+    #velocity_rolling_window_size: 10
+
+    
