--- a/src/robot_simulation/config/gz_bridge.yaml
+++ b/src/robot_simulation/config/gz_bridge.yaml
@@ -1,7 +1,16 @@
 # Full set of configurations
-- ros_topic_name: "/diff_cont/cmd_vel_unstamped"
+# - ros_topic_name: "/diff_cont/cmd_vel_unstamped"  # This should be on if we are using gazebo control
+#   gz_topic_name: "/model/fejemis/cmd_vel"
+#   ros_type_name: "geometry_msgs/msg/Twist"
+#   gz_type_name: "gz.msgs.Twist"
+#   subscriber_queue: 10
+#   publisher_queue: 10
+#   lazy: false
+#   direction: ROS_TO_GZ
+
+- ros_topic_name: "/diff_cont/cmd_vel"
   gz_topic_name: "/model/fejemis/cmd_vel"
-  ros_type_name: "geometry_msgs/msg/Twist"
+  ros_type_name: "geometry_msgs/msg/TwistStamped"
   gz_type_name: "gz.msgs.Twist"
   subscriber_queue: 10
   publisher_queue: 10
